--- a/SDG/src/main/resources/templates/login.html
+++ b/SDG/src/main/resources/templates/login.html
@@ -18,7 +18,8 @@
         <button type="submit" class="btn btn-primary">login</button>
         <button type="button" class="btn btn-primary" onClick="location.href='http://localhost:8080/user/signup'">sign up</button>
     </form>
-    <br/>
+	<br/>
+	<a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
 </div>
 </body>
 </html>
